<resources>
    <string name="app_name">My Application</string>
    <string name="city">City</string>
    <string name="time">Time</string>
    <string name="_3">3°</string>
    <string name="todo">TODO</string>
    <string name="view_weather">View Weather</string>
    <string name="your_city">Your City</string>
    <string name="_7">7°</string>
    <string name="humidity">Humidity</string>
    <string name="feel_like">Feel Like</string>
    <string name="vision">vision</string>
    <string name="login_information">Login Information:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here!</string>
    <string name="registerhere">Register Here:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login_here">Login Here!</string>

</resources>